# taxcord

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml
data/: README.md
examples/: README.md  example_blast.txt  example_bold.csv
scripts/: annotate_taxonomy.R  run_condense.sh
src/metatax/: __init__.py  bold_prep.py  cli.py  condense.py  filter_occurrence.py  merge.py  occurrences.py
src/taxcord/: __init__.py  bold_prep.py  cli.py  condense.py  merge.py  occurrences.py
tests/: test_bold_prep.py  test_condense.py  test_filter_occurrence.py  test_merge.py
tests/fixtures/: annotated_blast.txt
