[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "taxcord"
version = "0.1.0"
description = "A Python pipeline that condenses BLAST hits into per-OTU lineages, refines them with GBIF/BOLD occurrence counts, and reconciles the NCBI and BOLD branches"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "requests>=2.25",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "black>=23", "ruff>=0.1"]

[project.scripts]
taxcord = "taxcord.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
